--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -16,3 +16,8 @@ syn = "2.0.114"
 merak-core = { version = "0.1.0-alpha.0", path = "../core" }
 serde = { version = "1.0.228", features = ["derive"] }
 surrealdb = "2.5.0"
+utoipa = { version = "5.4.0" }
+
+[features]
+default = []
+utoipa = []
