--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -9,6 +9,7 @@ proc-macro = true
 [dependencies]
 darling = { version = "0.23.0", features = ["serde"] }
 heck = "0.5.0"
+proc-macro2 = "1.0.106"
 quote = "1.0.44"
 syn = "2.0.114"
 
@@ -19,5 +20,4 @@ surrealdb = "2.5.0"
 utoipa = { version = "5.4.0" }
 
 [features]
-default = []
 utoipa = []
