--- a/crates/merak/Cargo.toml
+++ b/crates/merak/Cargo.toml
@@ -11,7 +11,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 surrealdb = "2.5.0"
 tokio = { version = "1.49.0", features = ["full"] }
-utoipa = { version = "5.4.0", features = ["axum_extras"] }
+utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
 utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 argon2 = "0.5"
@@ -22,3 +22,4 @@ rand = "0.9"
 jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
 merak-core = { version = "0.1.0-alpha.0", path = "../core" }
 merak-macros = { version = "0.1.0-alpha.0", path = "../macros", features = ["utoipa"] }
+utoipa-redoc = { version = "6.0.0", features = ["axum"] }
